updated home code

--- a/pages/home.htm
+++ b/pages/home.htm
@@ -1,8 +1,8 @@
 title = "Demonstration"
 url = "/"
 layout = "default"
+is_hidden = 0
 ==
-
 <section class="logos">
     <div class="container">
         <div><img src="{{ 'assets/images/logos/mashable.png'|theme }}" alt=""></div>
@@ -21,7 +21,7 @@ layout = "default"
     <div class="row our-services">
         <div class="col-sm-12">
             <h4 class="headline"><span>What we do</span></h4>
-            <p>He hasn't got a freckle my mad as a middy. Trent from punchy maccas no dramas shazza got us some ripper. As dry as a bradman flamin lets throw a cut lunch commando.</p>
+            {% content "home-intro.htm" %}
 
             <div class="row">
                 <div class="col-sm-4">
