--- a/pages/error.htm
+++ b/pages/error.htm
@@ -1,6 +1,7 @@
 title = "Error page (500)"
 url = "/error"
 layout = "default"
+is_hidden = 0
 ==
 <div class="jumbotron">
     <div class="container">
@@ -10,10 +11,7 @@ layout = "default"
                 <img src="{{ 'assets/images/icons/svg/toilet-paper.svg'|theme }}" alt="">
             </div>
             <div class="col-xs-10">
-                <h1>Clean up on aisle three!</h1>
-                <p>We're very sorry, but something went wrong and the page cannot be displayed due to a <em>messy error</em>.</p>
-                <p>Don't worry, our specially programmed robotic workers have been deployed to clean things up.</p>
-                <p><small><em>Error code: 500</em></small>
+                {% content "error.htm" %}
             </div>
         </div>
     </div>
