seperate page not found text

--- a/pages/404.htm
+++ b/pages/404.htm
@@ -1,6 +1,7 @@
 title = "Page not found (404)"
 url = "/404"
 layout = "default"
+is_hidden = 0
 ==
 <div class="jumbotron">
     <div class="container">
@@ -10,10 +11,8 @@ layout = "default"
                 <img src="{{ 'assets/images/icons/svg/compas.svg'|theme }}" alt="">
             </div>
             <div class="col-xs-10">
-                <h1>You appear to be lost...</h1>
-                <p>We're very sorry, but the page you requested <em>cannot be found</em> here.</p>
-                <p>Try returning to where you started with this compass.</p>
-                <p><small><em>Error code: 404</em></small>
+                <h1>{{'You appear to be lost...'|_}}</h1>
+                {% content "error.htm" %}
             </div>
         </div>
     </div>
