--- a/content/error.htm
+++ b/content/error.htm
@@ -1,7 +1,11 @@
-<p>&nbsp;&lt;h1&gt;{{'You appear to be lost...'|_}}&lt;/h1&gt;</p>
+<p>&nbsp;</p>
 
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &lt;p&gt;We're very sorry, but the page you requested &lt;em&gt;cannot be found&lt;/em&gt; here.&lt;/p&gt;</p>
+<h4>We're very sorry, but the page you requested <em>cannot be found</em> here.</h4>
 
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &lt;p&gt;Try returning to where you started with this compass.&lt;/p&gt;</p>
+<h4>Try returning to where you started with this compass.</h4>
 
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &lt;p&gt;&lt;small&gt;&lt;em&gt;Error code: 404&lt;/em&gt;&lt;/small&gt;</p>
+<h4>
+	<br>
+</h4>
+
+<p class="oc-text-gray" skip="true"><em>Error code: 404</em></p>
