--- a/pages/error.htm
+++ b/pages/error.htm
@@ -11,6 +11,7 @@ is_hidden = 0
                 <img src="{{ 'assets/images/icons/svg/toilet-paper.svg'|theme }}" alt="">
             </div>
             <div class="col-xs-10">
+                <h1>{{'You appear to be lost...'|_}}</h1>
                 {% content "error.htm" %}
             </div>
         </div>
